--- a/src/laptop/App.css
+++ b/src/laptop/App.css
@@ -2,6 +2,7 @@
 #root {
   margin: 0;
   padding: 0;
+  background-color: #f2f2f2 !important;
 }
 
 
